# liamsnow.com

./: .gitignore  Cargo.toml  DISPLAY.md  Gemfile  README.md  _config.yml  blog.html  flake.nix  index.html  notes.html  projects.html  wrangler.toml
.github/workflows/: deploy.yml
_blog/: cache-coherence.adoc  igloo-model.adoc  igloo-shmem.adoc  igloo-v1.adoc  igloo-wasm.adoc
_includes/: footer.html  header.html  section.html  social.html
_includes/js/: date.js  extlink.js
_includes/schema/: schema.json
_layouts/: default.html  post.html
_notes/: illumos.adoc  oxide.adoc  todo.adoc
_projects/: esphomebridge-rs.adoc  homelab.adoc  ical-rs.adoc  igloo.adoc  liamsnow_com.adoc  liamsnow_com_v1.adoc  opensleep.adoc  penguin.adoc  virtex.adoc
_sass/: home.scss  listing.scss  main.scss  post.scss
assets/css/: home0.scss  listing0.scss  main0.scss  post0.scss
blog/: igloo_devlog_0.md  igloo_devlog_1.md  igloo_devlog_2.md  igloo_devlog_3.md  igloo_devlog_4.md  igloo_devlog_5.md  test1.md  test2.md  test3.md  test_blog.md
content/: blog.typ  home.typ  index.typ  ld.json  main.js  notes.typ  projects.typ  routes.toml
content/_shared/: date.js  fonts.css  header.js  light_dark.js  main.js  preload.js  template.typ
content/blog/: routes.toml  self_hosting.typ  test.typ
content/journey/: index.typ
content/notes/: _cache.typ  illumos.typ  oxide.typ  todo.typ
content/projects/: esphomebridge-rs.typ  homelab.typ  ical-rs.typ  igloo.typ  liamsnow_com.typ  opensleep.typ  routes.toml  self_hosting.typ  test.typ  virtex.typ
content/scripts/: date.js
content/shared/: template.typ
content/styles/: _components.scss  _main.scss  _mixins.scss  _variables.scss  collection.scss  fonts.scss  home.scss  index.scss  main.scss  post.scss
projects/: esphomebridge-rs.md  ical-rs.md  igloo.md  liamsnow_com.md  opensleep.md  test_project.md  virtex.md
projects/penguin/: demo.html  penguin-editor-5ddeb5b8cebcd0a1.js  penguin-editor-5ddeb5b8cebcd0a1_bg.wasm
public/: styles.css
src/: blog.rs  compiler.rs  home.rs  indexer.rs  lib.rs  main.rs  markdown.rs  page.rs  post.rs  routes.rs  scss.rs  sitemap.rs  template.rs  typst.rs  update.rs  watcher.rs  web.rs
src/compiler/: mod.rs  route.rs  scss.rs  sitemap.rs  static.rs  typst.rs
src/components/: display.rs  file_view.rs  menu_view.rs  mod.rs
src/web/: mod.rs  (+1 more)
static/: _components.scss  _mixins.scss  _variables.scss  fonts.scss  home.css  home.js  home.scss  index.css  index.scss  katex.js  main.css  main.scss  markdown.css  post.css  post.scss  robots.txt
(+35 files in other folders)
