[package]
name = "liamsnow-com"
version = "0.1.0"
edition = "2024"

[features]
dev = []

[dependencies]
anyhow = "1.0.100"
arc-swap = "1.8.0"
brotli = "8.0.2"
bytes = "1.11.0"
clap = { version = "4.5.55", features = ["derive"] }
grass = { version = "0.13.4", features = ["macro"] }
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.19", features = ["tokio"] }
mime_guess = "2.0.5"
notify = "8.2.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full", "process"] }
toml = "0.9.11"
walkdir = "2.5.0"
