[package]
name = "liamsnow-com"
version = "0.1.0"
edition = "2024"

[features]
dev = []

[dependencies]
anyhow = "1.0.100"
arc-swap = "1.8.0"
brotli = "8.0.2"
bytes = "1.11.0"
clap = { version = "4.5.55", features = ["derive", "env"] }
futures = "0.3.31"
grass = { version = "0.13.4", features = ["macro"] }
hex = "0.4.3"
hmac = "0.12.1"
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.19", features = ["tokio"] }
mime_guess = "2.0.5"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full", "process"] }
tokio-tungstenite = "0.28.0"
rustc-hash = "2.1"
typst = "0.14.2"
typst-html = "0.14.2"
codespan-reporting = "0.11"
pathdiff = "0.2"
typst-eval = "0.14.2"
parking_lot = "0.12.5"
libc = "0.2.182"

# [profile.release]
# opt-level = 3
# lto = "fat"
# codegen-units = 1
# # debug = true
# strip = true
# panic = "abort"
