[package]
name = "liamsnow-com"
version = "0.1.0"
edition = "2024"

[features]
dev = []

[dependencies]
anyhow = "1.0.100"
arc-swap = "1.8.0"
brotli = "8.0.2"
clap = { version = "4.5.55", features = ["derive", "env"] }
grass = { version = "0.13.4", features = ["macro"] }
hex = "0.4.3"
hmac = "0.12.1"
mime_guess = "2.0.5"
notify = "8.2.0"
sha2 = "0.10.9"
rustc-hash = "2.1"
typst = "0.14.2"
typst-html = "0.14.2"
codespan-reporting = "0.11"
pathdiff = "0.2"
typst-eval = "0.14.2"
memchr = "2.8.0"
httparse = "1.10.1"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
tungstenite = "0.28.0"
rayon = "1.11.0"
minify-html = "0.18.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 4
# debug = true
# strip = true
panic = "abort"
